--- a/generator/templates/spec.erb
+++ b/generator/templates/spec.erb
@@ -1,32 +1,29 @@
-require File.expand_path(File.join(File.dirname(__FILE__),"..","..","..",'/spec_helper'))
-<% @klass.find(:all) %>
-describe <%= @class_name %> do				  
+require File.expand_path(File.join(File.dirname(__FILE__),"..","..",'/spec_helper'))
 
-   use_vcr_cassette "<%= File.join(@klass.name.split("/")) %>", :record => :new_episodes, :match_requests_on => [:uri, :method, :body]
+describe <%= full_class_name %> do
+
+   use_vcr_cassette "<%= full_class_name %>", :record => :new_episodes, :match_requests_on => [:uri, :method, :body]
   
-   before(:each) do
-      @<%= @instance_name %> = <%= @class_name %>.find("<%= @instance_id %>")
-    end	 		
+   before(:each) do      
+      # Here you should provide an implementation of the creation of the object that is going to 
+      # be used to test the name will be test_<%= normalized_file_name %> 
+      @<%= normalized_file_name %> = <%= full_class_name %>.find("test_<%= normalized_file_name %>")
+   end				
 
-    <% @klass.client.wsdl.operations.keys.each do |operation| %>
-
-    <% if operation.to_s =~ /get_(.*)/ %>
-      <% method_name = $1 %>
-
-  describe "<%= method_name %>" do 
+   after(:each) do
+      # Here you should provide a way of deleting the object that was used to test ( test_<%= normalized_file_name %> ) 
+   end	
+  <% children_filtered(:of_class => MethodDeclaration).each do |method| %>          
+  <% if method.properties[:name] =~ /^get_(.*)/ %>  describe "<%= method_name = $1%>" do 
     it "exists" do
-
-      @<%= @instance_name %>.methods.should include(:<%= method_name.to_sym %>)
+      @<%= normalized_file_name %>.methods.should include(:<%= method_name %>)
     end
 
     it "should return without raise any exception" do
-      lambda { @<%= @instance_name %>.<%= method_name %> }.should_not raise_exception
-      puts @<%= @instance_name %>.<%= method_name %>.inspect
+      lambda { @<%= normalized_file_name %>.<%= method_name %> }.should_not raise_exception
     end
-
-  end
-
-    <% end %>
+  end<% else %>describe "<%= method.properties[:name]%>" do
+    pending
+  end<% end %>
   <% end %>
-
 end
