--- a/generator/templates/spec.erb
+++ b/generator/templates/spec.erb
@@ -2,7 +2,7 @@ require File.expand_path(File.join(File.dirname(__FILE__),"..","..",'/spec_helpe
 
 describe <%= full_class_name %> do
 
-   use_vcr_cassette "<%= full_class_name %>", :record => :new_episodes, :match_requests_on => [:uri, :method, :body]
+   use_vcr_cassette "<%= full_class_name %>", :record => :all, :match_requests_on => [:uri, :method, :body] # Change :record => :new_episodes when done
   
    before(:each) do      
       # Here you should provide an implementation of the creation of the object that is going to 
@@ -13,8 +13,12 @@ describe <%= full_class_name %> do
    after(:each) do
       # Here you should provide a way of deleting the object that was used to test ( test_<%= normalized_file_name %> ) 
    end	
+
   <% children_filtered(:of_class => MethodDeclaration).each do |method| %>          
-  <% if method.properties[:name] =~ /^get_(.*)/ %>  describe "<%= method_name = $1%>" do 
+  <% method_name = method.properties[:name] =~ /^get_(.*)/ ? $1 : method.properties[:name] %>
+
+  describe "#<%= method_name %>" do
+  <% if method.properties[:name] =~ /^get_(.*)/ %>
     it "exists" do
       @<%= normalized_file_name %>.methods.should include(:<%= method_name %>)
     end
@@ -22,8 +26,22 @@ describe <%= full_class_name %> do
     it "should return without raise any exception" do
       lambda { @<%= normalized_file_name %>.<%= method_name %> }.should_not raise_exception
     end
-  end<% else %>describe "<%= method.properties[:name]%>" do
-    pending
-  end<% end %>
+
+  <% else %>
+    it "<%= method.properties[:comments] %>" do 
+      pending
+    end
+
+    it "returns an instance of <%= method.return_type.type %>" do
+      pending
+    end
+
+    <% method.throws.each do |exception| %>
+    it "raises a <%= exception.type %> <%= exception.comment.gsub("Raised ","") %>" do
+      pending
+    end
+    <% end %>
+  <% end %>
+  end
   <% end %>
 end
